[????-??-??] - Version 0.9.1
    * Added getSheetByName() method to retrieve sheet by name (original patch by Rob Gagnon)
    * Added basic documentation

[2010-08-27] - Version 0.9.0
	* Added support for LibXL 3.1.0
	* Added new methods
		- ExcelSheet::setNamedRange(string name, int row, int col, int to_row, int to_col)
		- ExcelSheet::delNamedRange(string name)
		- ExcelSheet::setPrintRepeatRows(int rowFirst, int rowLast)
		- ExcelSheet::setPrintRepeatCols(int colFirst, int colLast)
		- ExcelSheet::getGroupSummaryBelow()
		- ExcelSheet::setGroupSummaryBelow(bool direction)
		- ExcelSheet::getGroupSummaryRight()
		- ExcelSheet::setGroupSummaryRight(bool direction)
		- ExcelSheet::clearPrintRepeats()
		- ExcelSheet::clearPrintArea()

[2010-08-27] - Version 0.8.6

	* Added support for LibXL 3.0.0
	* Added support for generating Excel 2007/2010 (xlsx files)
		- the ExcelBook() method now has a constructor parameter that can be used to toggle xlsx mode
	* Added Book methods for xlsx color
		- colorUnpack, colorPack, setRGBMode, rgbMode
	* Added missing validation checks and fixed on-error memory leak

[2010-08-11] - Version 0.8.5

	* Fixed build on 5.4 (patch from Felipe Pena)

[2010-08-01] - Version 0.8.2
	* Fixed shared build

[2010-08-01] - Version 0.8.1

	* Fixed build on 5.3 (patch from Felipe Pena)
	* Allow compilation against LibXL 2.4.3k
	* Added ExcelSheet::setProtect(), ExcelSheet::protect() to set/get sheet protection
	* Added ExcelSheet::setPrintHeaders() to set printability of column/row headers
	* Added ExcelSheet::setCellFormat() method (LibXL 2.4.3k+) to set a cell format
	* Added ExcelBook::getAllFormats() method (LibXL 2.4.3k+) to get a list of all document formats

[2010-08-01] - Version 0.8

	* Initial Release