@@ -1,4 +1,5 @@
 [????-??-??] - Version 0.9.1
+	* Added work-around for a bug inside xlSheetIsDate() that detects treats custom number formats as dates
     * Added getSheetByName() method to retrieve sheet by name (original patch by Rob Gagnon)
     * Added basic documentation
 
